margin bottom to navbar to avoid overflow

--- a/Team-Share-Front/src/components/App/app.scss
+++ b/Team-Share-Front/src/components/App/app.scss
@@ -1,10 +1,13 @@
 @import 'src/styles/_vars.scss';
 
 
-#app {
+
+#app , #root, body, html {
   background-color: $gainsboro;
   height: 100%;
+  display:flex;
+  flex-direction:column;
+  justify-content: space-between;
 }
-
 
 
