--- a/Team-Share-Front/src/components/Home/home.scss
+++ b/Team-Share-Front/src/components/Home/home.scss
@@ -13,6 +13,7 @@
 }
 
 .welcome {
+    margin-top:4rem;
     text-align: left;
     color: $eerie-black;
 
