--- a/Team-Share-Front/src/components/Navbar/navbar.scss
+++ b/Team-Share-Front/src/components/Navbar/navbar.scss
@@ -1,6 +1,7 @@
 @import 'src/styles/_vars.scss';
 
 .navbar {
+  margin-bottom:8rem;
   z-index:2000;
   display: flex;
   justify-content: space-between;
@@ -88,6 +89,7 @@
 
 @media (max-width: 768px) {
   .navbar {
+    margin-bottom: 5rem;
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -101,7 +103,5 @@
     &-links {
       display: none;
     }
-  
-
   }
 }
